samples/_failures_safe/1761253717_4049be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cc6bfc2.c: In function ‘main’:
./samples/SAFE/__tmp_4cc6bfc2.c:135:12: error: missing terminating " character
  135 |     printf("Matrix Operations
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4cc6bfc2.c:135:5: error: expected expression at end of input
  135 |     printf("Matrix Operations
      |     ^~~~~~
./samples/SAFE/__tmp_4cc6bfc2.c:135:5: error: expected declaration or statement at end of input
